# axum_demo

./: Cargo.toml  application-dev.yml
src/: main.rs
src/dao/: mod.rs  mysql_conn_pool.rs
src/dao/entity/: entity.rs
src/dao/mapper/: mod.rs  role_mapper.rs  user_mapper.rs
src/error/: error.rs
src/handler/: mod.rs  test_controller.rs  user_controller.rs
src/load_config/: init_load_config.rs  models.rs
src/utils/: constant.rs  id_generator.rs  mod.rs
