[package]
edition = "2021"
name = "uamself_axum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = {version = "1.34.0", features = ["full"]}

#日志依赖
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# 一次性初始化对象工具包
once_cell = "1.18.0"

#数据库依赖
mysql_common = {version = "0.30.6", features = ["chrono"]}
#处理时间
chrono = {version = "0.4.31", features = ["serde"]}
mysql = "24.0.0"
# 序列化工具
lazy_static = "1"
schemars = "0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_yaml = "0"

# 工具包
anyhow = "1"
